SERVER-40112 db.disableFreeMonitoring() returns 'not master' on secondary after restart

(cherry picked from commit b5883226855662d54f990ebb7dcfd952c037a11c)